# payback

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  styles.css
src/: balancing.rs  components.rs  debt.rs  main.rs  partitionings.rs  state.rs  transactions.rs
src/components/: debt_form.rs  debt_input.rs  entries.rs
