[package]
name = "payout-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
